rust/tests/snapshots/help/profile.snap
---
source: tests/cli/snapshots.rs
---
Manage account profiles

Usage: vendo profile [OPTIONS] <COMMAND>

Commands:
  list     List all configured profiles
  current  Show the current effective profile
  switch   Switch to a different profile
  help     Print this message or the help of the given subcommand(s)

Options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help
