rust/tests/snapshots/help/self-update.snap
---
source: tests/cli/snapshots.rs
---
Update the Vendo CLI using the hosted installer

Usage: vendo self-update [OPTIONS]

Options:
      --version <version>  Install a specific version
  -h, --help               Print help

Global options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics

Examples:
  $ vendo self-update
  $ vendo self-update --version 0.3.0
