rust/tests/snapshots/help/sources.snap
---
source: tests/cli/snapshots.rs
---
Manage data sources

Usage: vendo sources [OPTIONS] <COMMAND>

Commands:
  list    List all data sources
  get     Get source details
  sync    Trigger a manual sync
  pause   Pause a data source
  resume  Resume a paused data source
  delete  Delete a data source (soft delete)
  create  Create a new data source
  update  Update a data source
  help    Print this message or the help of the given subcommand(s)

Options:
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help
